# sigma

./: .gitignore  pyproject.toml
beta/api/menu/: serializers.py  urls.py
beta/api/menu/views/: category.py  foodItem.py  menu.py
beta/api/restaurant/: serializers.py  urls.py  views.py
beta/apps/menu/: admin.py
beta/apps/menu/migrations/: 0001_initial.py  0002_category_menu_category.py
beta/apps/menu/models/: __init__.py  category.py  food_items.py  menu.py
beta/apps/restaurant/: admin.py
beta/apps/restaurant/migrations/: 0001_initial.py
beta/apps/restaurant/models/: restaurant.py
beta/apps/users/: admin.py
beta/apps/users/migrations/: 0001_initial.py
beta/apps/users/models/: users.py
beta/beta/: settings.py  urls.py
beta/swagger/: urls.py
